tests/invalid/from_import_nonexistent_absolute/main.py
from nonexistent_pkg import something
